Added page title and cleaned up URL input

--- a/views/enter-url.html
+++ b/views/enter-url.html
@@ -15,11 +15,18 @@
 <body>
 <main role="main">
 
+<h1>structure.exposed</h1>
+
 <form action="/proxy">
-    <input name="url" placeholder="http://example.com">
+
+    <label for="url">
+        Check a website’s underlying structure by resetting all styling to browser default.
+        <input name="url" type="url" autocapitalize="off" placeholder="http://example.com">
+    </label>
+
     <input type="submit">
 </form>
-
+Why?
 </main>
 <!-- TODO: Google Analytics -->
 </body>
