Added poor man’s cachebust

--- a/views/enter-url.html
+++ b/views/enter-url.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>structure.exposed</title>
-    <meta name="description" content="$$projectFullDescription" />
+    <meta name="description" content="Check a website’s underlying anatomy by resetting all styling to browser default." />
     <link rel="author" href="humans.txt" />
 
-    <link rel="stylesheet" href="main.css?rev={{timestamp}}" />
+    <link rel="stylesheet" href="main.css?rev=20161008" />
     <!-- TODO: icons and social -->
 </head>
 <body>
