Updated form label copy

--- a/views/enter-url.html
+++ b/views/enter-url.html
@@ -20,7 +20,7 @@
 <form id="form" class="form" action="/proxy">
 
     <label for="form-url" class="form__label">
-        Check a website’s anatomy by resetting all styling to browser default.
+        View a website’s anatomy by resetting all styling to browser default.
         <input
             type="url"
             name="form-url"
