--- a/public/main.css
+++ b/public/main.css
@@ -50,14 +50,25 @@ main {
 /* Links /////////////////////////////////////////////////////////////////// */
 a {
     color: #0074d9;
+    text-decoration: none;
+    text-shadow:
+      0.04em 0 0 #ffffff, -0.04em 0 0 #ffffff,
+      0 0.04em 0 #ffffff, 0 -0.04em 0 #ffffff, 0.1em 0 0 #ffffff, -0.1em 0 0 #ffffff, 0 0.1em 0 #ffffff, 0 -0.1em 0 #ffffff;
+    background-image: linear-gradient(to right, currentColor 0%, currentColor 100%);
+    background-repeat: repeat-x;
+    background-position: bottom 0.08em center;
+    background-size: 100% 0.1em;
 }
 
 a:hover {
-    text-decoration: none;
+    background-image: none;
 }
 
 a:active {
-    color: #ff4136;
+    position: relative;
+      top: 1px;
+
+    color: #004b8c;
 }
 
 a:visited {
@@ -93,10 +104,13 @@ a:visited {
     width: 100%;
 
     border: 1px solid #c1c1c1;
+    border-radius: 0;
 
     font-size: calc(1em + 1.5vw);
 
     transition: border-color 0.2s ease-in-out;
+
+    -webkit-appearance: none;
 }
 
 .form__url:hover {
@@ -109,9 +123,10 @@ a:visited {
 
 .form__button {
     margin-top: 0.75em;
-    padding: 3vh 4vw;
+    padding: 3vh 5vw;
 
     border: 0;
+    border-radius: 0;
 
     background-color: #0074d9;
 
@@ -127,7 +142,7 @@ a:visited {
 }
 
 .form__button:active {
-    padding: 4vh 4vw 2vh 4vw;
+    padding: 4vh 5vw 2vh 5vw;
 
     -webkit-box-shadow: inset 0 0.4em 0 0 #004b8c;
     -moz-box-shadow: inset 0 0.4em 0 0 #004b8c;
@@ -140,6 +155,7 @@ a:visited {
     display: block;
     float: right;
     margin-top: 0.9em;
+    margin-right: 0.25em;
 
     font-size: calc(1em + 0.5vw);
     text-align: right;
@@ -175,9 +191,6 @@ a:visited {
 
     .form__more-info {
         margin-top: 2em;
-        width: 100%;
-
-        text-align: center;
     }
 
 }
