--- a/public/main.css
+++ b/public/main.css
@@ -135,6 +135,8 @@ a:visited {
     letter-spacing: 1px;
 
     transition: background-color 0.2s ease-in-out;
+
+    -webkit-appearance: none;
 }
 
 .form__button:hover {
