Why now links to why

--- a/views/enter-url.html
+++ b/views/enter-url.html
@@ -40,7 +40,7 @@
     <a
         rel="external noopener"
         class="form__more-info"
-        href="https://github.com/danielsmc/structure-exposed/blob/master/README.md">
+        href="https://github.com/danielsmc/structure-exposed/blob/master/README.md#why">
         Why?
     </a>
 
