--- a/views/enter-url.html
+++ b/views/enter-url.html
@@ -9,8 +9,19 @@
     <meta name="description" content="A simple proxy that strips away CSS frippery." />
     <link rel="author" href="humans.txt" />
 
-    <link rel="stylesheet" href="main.css?rev=201610090426" />
-    <!-- TODO: icons and social -->
+    <link rel="stylesheet" href="main.css?rev=201610090713" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?rev=201610090713">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png?rev=201610090713" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon-16x16.png?rev=201610090713" sizes="16x16">
+    <link rel="manifest" href="/manifest.json?rev=201610090713">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg?rev=201610090713" color="#0074d9">
+    <link rel="shortcut icon" href="/favicon.ico?rev=201610090713">
+    <meta name="apple-mobile-web-app-title" content="structure.exposed">
+    <meta name="application-name" content="structure.exposed">
+    <meta name="theme-color" content="#0074d9">
+
+    <!-- TODO: social -->
 </head>
 <body>
 <main id="main" role="main">
