--- a/views/enter-url.html
+++ b/views/enter-url.html
@@ -29,6 +29,12 @@
     <meta property="og:image" content="https://structure.exposed/android-chrome-512x512.png?rev=201610090713" />
     <meta property="og:image:width" content="512"/>
     <meta property="og:image:height" content="512"/>
+
+    <meta itemprop="name" content="structure.exposed" />
+    <meta itemprop="description" content="A simple proxy that strips away CSS frippery." />
+    <meta itemprop="image" content="https://structure.exposed/android-chrome-512x512.png?rev=201610090713" />
+
+
 </head>
 <body>
 <main id="main" role="main">
