--- a/views/enter-url.html
+++ b/views/enter-url.html
@@ -30,10 +30,14 @@
     <meta property="og:image:width" content="512"/>
     <meta property="og:image:height" content="512"/>
 
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="structure.exposed" />
+    <meta name="twitter:description" content="A simple proxy that strips away CSS frippery." />
+    <meta name="twitter:image" content="https://structure.exposed/android-chrome-512x512.png?rev=201610090713" />
+
     <meta itemprop="name" content="structure.exposed" />
     <meta itemprop="description" content="A simple proxy that strips away CSS frippery." />
     <meta itemprop="image" content="https://structure.exposed/android-chrome-512x512.png?rev=201610090713" />
-
 
 </head>
 <body>
