--- a/views/enter-url.html
+++ b/views/enter-url.html
@@ -21,7 +21,24 @@
     <meta name="application-name" content="structure.exposed">
     <meta name="theme-color" content="#0074d9">
 
-    <!-- TODO: social -->
+    <meta property="og:site_name" content="structure.exposed"/>
+    <meta property="og:description" content="A simple proxy that strips away CSS frippery."/>
+    <meta property="og:url" content="https://structure.exposed/ "/>
+    <meta property="og:type" content="website "/>
+    <meta property="og:locale" content="en">
+    <meta property="og:image" content="https://structure.exposed/android-chrome-512x512.png?rev=201610090713" />
+    <meta property="og:image:width" content="512"/>
+    <meta property="og:image:height" content="512"/>
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="structure.exposed" />
+    <meta name="twitter:description" content="A simple proxy that strips away CSS frippery." />
+    <meta name="twitter:image" content="https://structure.exposed/android-chrome-512x512.png?rev=201610090713" />
+
+    <meta itemprop="name" content="structure.exposed" />
+    <meta itemprop="description" content="A simple proxy that strips away CSS frippery." />
+    <meta itemprop="image" content="https://structure.exposed/android-chrome-512x512.png?rev=201610090713" />
+
 </head>
 <body>
 <main id="main" role="main">
