--- a/views/enter-url.html
+++ b/views/enter-url.html
@@ -9,15 +9,15 @@
     <meta name="description" content="A simple proxy that strips away CSS frippery." />
     <link rel="author" href="humans.txt" />
 
-    <link rel="stylesheet" href="main.css?rev=201610091029" />
+    <link rel="stylesheet" href="main.css?rev=201610091050" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?rev=201610091029">
-    <link rel="icon" type="image/png" href="/favicon-32x32.png?rev=201610091029" sizes="32x32">
-    <link rel="icon" type="image/png" href="/favicon-16x16.png?rev=201610091029" sizes="16x16">
-    <link rel="manifest" href="/manifest.json?rev=201610091029">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg?rev=201610091029" color="#0074d9">
-    <link rel="shortcut icon" href="/favicon.ico?rev=201610091029">
-    <meta name="apple-mobile-web-app-title" content="structure.exposed">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?rev=201610091050">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png?rev=201610091050" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon-16x16.png?rev=201610091050" sizes="16x16">
+    <link rel="manifest" href="/manifest.json?rev=201610091050">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg?rev=201610091050" color="#0074d9">
+    <link rel="shortcut icon" href="/favicon.ico?rev=201610091050">
+    <meta name="apple-mobile-web-app-title" content="structure">
     <meta name="application-name" content="structure.exposed">
     <meta name="theme-color" content="#0074d9">
 
@@ -26,18 +26,18 @@
     <meta property="og:url" content="https://structure.exposed/ "/>
     <meta property="og:type" content="website "/>
     <meta property="og:locale" content="en">
-    <meta property="og:image" content="https://structure.exposed/android-chrome-512x512.png?rev=201610091029" />
+    <meta property="og:image" content="https://structure.exposed/android-chrome-512x512.png?rev=201610091050" />
     <meta property="og:image:width" content="512"/>
     <meta property="og:image:height" content="512"/>
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="structure.exposed" />
     <meta name="twitter:description" content="A simple proxy that strips away CSS frippery." />
-    <meta name="twitter:image" content="https://structure.exposed/android-chrome-512x512.png?rev=201610091029" />
+    <meta name="twitter:image" content="https://structure.exposed/android-chrome-512x512.png?rev=201610091050" />
 
     <meta itemprop="name" content="structure.exposed" />
     <meta itemprop="description" content="A simple proxy that strips away CSS frippery." />
-    <meta itemprop="image" content="https://structure.exposed/android-chrome-512x512.png?rev=201610091029" />
+    <meta itemprop="image" content="https://structure.exposed/android-chrome-512x512.png?rev=201610091050" />
 </head>
 <body>
 <main id="main" role="main">
