Set input name attributes so they're what the server expects

--- a/views/enter-url.html
+++ b/views/enter-url.html
@@ -50,7 +50,7 @@
         View a website’s anatomy by resetting all styling to browser default.
         <input
             type="url"
-            name="form-url"
+            name="url"
             id="form-url"
             class="form__url"
             autocapitalize="off"
@@ -59,7 +59,6 @@
 
     <input
         type="submit"
-        name="form-button"
         id="form-button"
         class="form__button"
         value="View URL" />
