--- a/views/enter-url.html
+++ b/views/enter-url.html
@@ -32,6 +32,7 @@
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="structure.exposed" />
+    <meta name="twitter:site" content="@structurexposed" />
     <meta name="twitter:description" content="A simple proxy that strips away CSS frippery." />
     <meta name="twitter:image" content="https://structure.exposed/android-chrome-512x512.png?rev=201610091050" />
 
