--- a/views/enter-url.html
+++ b/views/enter-url.html
@@ -48,7 +48,7 @@
 <form id="form" class="form" action="/proxy">
 
     <label for="form-url" class="form__label">
-        View a website’s anatomy by resetting all styling to browser default.
+        View a website’s skeleton by resetting all styling to browser default.
         <input
             type="url"
             name="url"
