Added konami.js to homepage

--- a/views/enter-url.html
+++ b/views/enter-url.html
@@ -75,6 +75,7 @@
 </form>
 
 </main>
+    <script type="text/javascript" src="konami.js?rev=201610091050"></script>
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
