--- a/views/enter-url.html
+++ b/views/enter-url.html
@@ -43,7 +43,7 @@
 <body>
 <main id="main" role="main">
 
-<h1 class="page__title">str<span class="kern">u</span>cture.<span class="kern">e</span>xposed</h1>
+<h1 class="page__title">structure.exposed</h1>
 
 <form id="form" class="form" action="/proxy">
 
